--- a/src/app/Admin/profil-admin/profil-admin.component.html
+++ b/src/app/Admin/profil-admin/profil-admin.component.html
@@ -65,6 +65,7 @@
           <h6 class="collapse-header">Rendez-vous sans médecin</h6>
           <a class="collapse-item" href="rdvAvecMedecin">Rendez-vous sans  médecin</a>
           <a class="collapse-item" href="rendez-vous">Rendez-vous accepté</a>
+          <a class="collapse-item" href="listeRdvConfirmé">Rendez-vous confirmé</a>
         </div>
       </div>
     </li>
