--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -38,8 +38,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
-          <i class="bi bi-envelope-fill "  style="color: white"></i>Notification
+        <a class="nav-link" href="javascript:void(0)" routerLink="/rdvConfirmé" routerLinkActive="active">
+          <i class="bi bi-envelope-fill "  style="color: white"></i>Rndez-vous confirmé
         </a>
       </li>
       <li class="nav-item">
