--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -1,16 +1,16 @@
 <app-header></app-header>
 <div class="container-fluid section " style="margin-top: -8rem">
   <div class="container-fluid doctorBg" style="margin-top: 5rem">
-    <img src="../assets/image/bcgdoctor.png" style="margin-top: 6rem">
+    <img src="../assets/image/bcgdoctor.png" style="margin-top: 6rem" class="imgBG">
     <div class="card info" >
-      <h1 style="margin-top: 4rem">  Votre santé est
+      <h1 style="margin-top: 3rem;font-size: 50px">  Votre santé est
         notre priorité
       </h1>
 
-      <h5> Notre plate-forme web communicative destinée
+      <h5 style="font-size: 26px" > Notre plate-forme web communicative destinée
         aux Médecins ayant pour but d’y assurer un soin optimal au client dans l’Afrique.
       </h5>
-      <h5 >
+      <h5  style="font-size: 26px" >
         Nou nous essayons de fournir et de faciliter
         les meilleurs services de santé pour vous.</h5>
 
