--- a/src/app/composants/footer/footer.component.scss
+++ b/src/app/composants/footer/footer.component.scss
@@ -1,43 +1,42 @@
-footer{
-  width: 100%;
-  height: auto;
-  background-color: #001B35;
-  color: white;
-  margin-top: 4rem;
 
+/*footer*/
+.col_white_amrc { color:#FFF;}
+body p,a,span{
+  font-size: 16px !important;
 }
+a{
+  text-decoration: none;
+}
+footer { width:100%; background-color:#263238; min-height:250px; padding:10px 0px 25px 0px ;}
+.pt2 { padding-top:40px ; margin-bottom:20px ;}
+footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
+.mb10 { padding-bottom:15px ;}
+.footer_ul_amrc { margin:0px ; list-style-type:none ; font-size:14px; padding:0px 0px 10px 0px ; }
+.footer_ul_amrc li {padding:0px 0px 5px 0px;}
+.footer_ul_amrc li a{ color:#CCC;}
+.footer_ul_amrc li a:hover{ color:#fff; text-decoration:none;}
+.fleft { float:left;}
+.padding-right { padding-right:10px; }
 
-.content{
-  width: auto;
-  height: auto;
-  background-color: transparent;
-  border:none;
-  padding: 1rem;
-  margin: auto;
+.footer_ul2_amrc {margin:0px; list-style-type:none; padding:0px;}
+.footer_ul2_amrc li p { display:table; }
+.footer_ul2_amrc li a:hover { text-decoration:none;}
+.footer_ul2_amrc li i { margin-top:5px;}
 
+.bottom_border { border-bottom:1px solid #323f45; padding-bottom:20px;}
+.foote_bottom_ul_amrc {
+  list-style-type:none;
+  padding:0px;
+  display:table;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-left: auto;
 }
-.content li{
-  margin-top: 1rem;
-}
+.foote_bottom_ul_amrc li { display:inline;}
+.foote_bottom_ul_amrc li a { color:#999; margin:0 12px;}
 
-h4{margin-left: -2rem;
-}
-.rowcard{
-  text-align: center;
-  width: 50%;
-  height: auto;
-  margin-left: 4rem;
-}
-
-.rowaall{
-  width: 100%;
-  padding-left: 20rem;
-  padding-top: 2rem;
-}
-.contentSejours{
-  width: auto;
-  height: 15rem;
-  border:none;
-  background-color: transparent;
-  margin-left: 2rem;
-}
+.social_footer_ul { display:table; margin:15px auto 0 auto; list-style-type:none;  }
+.social_footer_ul li { padding-left:20px; padding-top:10px; float:left; }
+.social_footer_ul li a { color:#CCC; border:1px solid #CCC; padding:8px;border-radius:50%;}
+.social_footer_ul li i {  width:20px; height:20px; text-align:center;}
