--- a/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.html
+++ b/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.html
@@ -11,11 +11,18 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" formControlName="description"></textarea>
   </div>
   <div class="form-group mt-4">
-    <div> <label for="exampleFormControlFile1"> image</label></div>
-    <img [src]="imgURL" style="width: 150px; height:100px ; margin-bottom: 2rem">
-    <input type="file" accept="image/*" (change)="onSelectFile($event)"   class="form-control-file"
-           id="exampleFormControlFile1" formControlName="image">
+    <div>
+      <label for="exampleFormControlFile1">Image</label>
+    </div>
+    <img [src]="imgURL" style="width: 150px; height: 100px; margin-bottom: 2rem">
+    <div class="custom-file-upload">
+      <input type="file" accept="image/*" (change)="onSelectFile($event)" id="exampleFormControlFile1" formControlName="image">
+      <label for="exampleFormControlFile1" class="custom-file-upload-label" style="margin-left: 1rem">
+        {{ imagePath ? 'Image Selected' : 'Choose image' }}
+      </label>
+    </div>
   </div>
+
   <div class="form-group mt-4">
     <label>Duration:</label>
     <div formGroupName="duration">
