--- a/src/app/EspaceMedecin/authentifier/authentifier.component.html
+++ b/src/app/EspaceMedecin/authentifier/authentifier.component.html
@@ -12,7 +12,7 @@
 
          <div class="form-row "> <label for="inputEmail4" style="font-size: 14px">Email</label>
         <div style="display: flex; justify-content: center"><i class="bi bi-person-fill" style="color: #0066FF; margin-right: 1rem"></i>
-          <input type="text" class="form-control" id="inputEmail4"  formControlName="email"></div>
+          <input type="text" class="form-control" id="inputEmail4"  formControlName="email" autocomplete="off"></div>
        </div>
        </div>
        <div class="form-group col-md-8 " style="margin: auto ; margin-top: 2rem ; " >
