--- a/src/app/EspaceMedecin/inscrire/inscrire.component.html
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.html
@@ -11,7 +11,7 @@
 
       <div class="form-group col-md-4 " >
         <label for="inputEmail4" >Nom</label>
-        <input type="text" class="form-control" id="inputEmail4" placeholder="Nom" formControlName="firstname"  required
+        <input type="text" class="form-control" id="inputEmail4" placeholder="Nom" formControlName="firstname"  required autocomplete="off"
         >
 
 
@@ -33,7 +33,7 @@
 
       <div class="form-group col-md-4" style="justify-content: center;">
         <label for="inputPassword4">Prénom</label>
-        <input type="text" class="form-control" id="inputPassword4" placeholder="Prénom" formControlName="lastname"  required>
+        <input type="text" class="form-control" id="inputPassword4" placeholder="Prénom" formControlName="lastname"  required autocomplete="off">
         <div
           *ngIf="
         MedecinForm.controls['lastname'].invalid &&
@@ -52,7 +52,7 @@
     <div class="form-row " style="justify-content: center;">
     <div class="form-group col-md-4" >
       <label for="inputAddress">Ville</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="ville" formControlName="ville"  required>
+      <input type="text" class="form-control" id="inputAddress" placeholder="ville" formControlName="ville"  required autocomplete="off">
 
 
       <div
@@ -71,7 +71,7 @@
     </div>
     <div class="form-group col-md-4">
       <label for="inputAddress2">Address</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="adresse"formControlName="adresse"  required>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="adresse"formControlName="adresse"  required autocomplete="off">
 
       <div
         *ngIf="
@@ -91,7 +91,7 @@
     <div class="form-row" style="justify-content: center;">
       <div class="form-group col-md-4">
         <label for="telephone">Téléphone</label>
-        <input type="text" class="form-control" id="telephone" formControlName="telephone"  required>
+        <input type="text" class="form-control" id="telephone" formControlName="telephone"  required autocomplete="off">
         <div
           *ngIf="
         MedecinForm.controls['telephone'].invalid &&
@@ -108,7 +108,7 @@
       </div>
       <div class="form-group col-md-4">
         <label for="email">Email</label>
-        <input type="text" class="form-control" id="email" formControlName="email"  required>
+        <input type="text" class="form-control" id="email" formControlName="email"  required autocomplete="off">
        <!-- <div *ngIf="emailExists" style="color: red;">Email already exists</div>-->
         <div
           *ngIf="
@@ -142,6 +142,9 @@
         >
           <div *ngIf="MedecinForm.controls['password'].errors?.['required']"  >
             Ce champ est obligatoire !.
+          </div>
+          <div *ngIf="MedecinForm.controls['password'].errors?.['minlength']"  >
+            Longeur du mot passe au moins 6 caractéres.
           </div>
         </div>
 
@@ -210,7 +213,7 @@
    <div [formGroupName]="index">
     <div class="form-row " style="justify-content: center;margin-top: 2rem">
       <div>
-      <label>Diploma:</label>
+      <label>Diplome:</label>
       <input formControlName="diploma" type="text" required></div>
       <div>
       <label>Nom Compagnie:</label>
@@ -232,7 +235,7 @@
 
 
     <div class="btn">
-    <button type="submit" class="btn"  style="margin-top: 2rem" [disabled]="MedecinForm.invalid">
+    <button type="submit" class="btn"  style="margin-top: 2rem" >
       Inscrire</button>
     </div> <!--routerLink="/authentifier" routerLinkActive="active"-->
 </form>
