--- a/src/app/acceuil-content/acceuil-content.component.scss
+++ b/src/app/acceuil-content/acceuil-content.component.scss
@@ -25,7 +25,9 @@
     //  100% {background-color: green;}
   }
 }
+@media (max-width: 793px) {
 
+}
 .doctorBg{
   //border: 1px solid black;
   width: 100%;
@@ -136,10 +138,11 @@
 
 .sectoin3{
   width: 100%;
-  height: 40rem;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  flex-wrap: wrap;
   text-align: center;
   text-line-through: single;
   background-color: #E1EDFA;
