--- a/src/app/detail-profile/detail-profileA/affecterMedecin/afficher-detail-medc/afficher-detail-medc.component.scss
+++ b/src/app/detail-profile/detail-profileA/affecterMedecin/afficher-detail-medc/afficher-detail-medc.component.scss
@@ -1,9 +1,47 @@
-.allCard{
-  width:100%;
+body {
+  background-color: #f9f9fa
+}
+
+.padding {
+  padding: 3rem !important
+}
+
+.user-card-full {
+  width: 100%;
   height: auto;
-  margin:auto !important;
-  text-align: center;
-  align-content: center;
+
+  display: flex;
+}
+
+.card {
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 20px 0 rgba(69,90,100,0.08);
+  box-shadow: 0 1px 20px 0 rgba(69,90,100,0.08);
+  border: none;
+  margin-bottom: 30px;
+}
+
+.m-r-0 {
+  margin-right: 0px;
+}
+
+.m-l-0 {
+  margin-left: 0px;
+}
+
+.user-card-full .user-profile {
+  border-radius: 5px 0 0 5px;
+}
+
+.bg-c-lite-green {
+  background: -webkit-gradient(linear, left top, right top, from(#7fd3ed), to(#5e72e4));
+  background: linear-gradient(to right, #5e72e4, #7fd3ed);
+}
+
+.user-profile {
+  padding: 20px 0;
+  width:20rem;
+  height: 40rem;
 
 }
 .parcours{
@@ -15,29 +53,104 @@
   padding: 0.5rem;
 
 }
-.image{
-  width: 16rem;
-  height: 12rem;
-  margin: auto;
-}
-.image img{
-  width: 100%;
-  height: 100%;
-}
-.infotxt{
-  width: 16rem;
-  height: auto;
-  margin: auto;
-  margin-top: 2rem;
-  border: none;
-  background-color: transparent;
+.card-block {
+  padding: 1.25rem;
+  height: 40rem;
 
 }
-.content{
-  width: auto;
-  height: 100%;
-  margin: auto;
+
+.m-b-25 {
+  margin-bottom: 25px;
 }
+
+.img-radius {
+  border-radius: 5px;
+}
+
+
+
+h6 {
+  font-size: 14px;
+}
+
+.card .card-block p {
+  line-height: 25px;
+}
+
+@media only screen and (min-width: 1400px){
+  p {
+    font-size: 14px;
+  }
+}
+
+.card-block {
+  padding: 1.25rem;
+}
+
+.b-b-default {
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
+.p-b-5 {
+  padding-bottom: 5px !important;
+}
+
+.card .card-block p {
+  line-height: 25px;
+}
+
+.m-b-10 {
+  margin-bottom: 10px;
+}
+
+.text-muted {
+  color: #919aa3 !important;
+}
+
+.b-b-default {
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.f-w-600 {
+  font-weight: 600;
+}
+
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
+.m-t-40 {
+  margin-top: 20px;
+}
+
+.p-b-5 {
+  padding-bottom: 5px !important;
+}
+
+.m-b-10 {
+  margin-bottom: 10px;
+}
+
+.m-t-40 {
+  margin-top: 20px;
+}
+
+.user-card-full .social-link li {
+  display: inline-block;
+}
+
+.user-card-full .social-link li a {
+  font-size: 20px;
+  margin: 0 10px 0 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+
 .btns  {
   width: 26rem;
   height: 2rem;
@@ -56,9 +169,9 @@
   margin-left: 1rem;
 }
 h4{
-  color: #0066FF;
+  color: #FFFFFF;
 }
-h5{ color: #5e72e4}
+
 .btn2:hover{
   background-color: transparent;
   color: #0066FF;
