--- a/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.scss
+++ b/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.scss
@@ -78,3 +78,25 @@ h2{
   transition: 1s;
   border: 1px solid #1580EB;
 }
+.custom-file-upload {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.custom-file-upload input[type="file"] {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.custom-file-upload-label {
+  background-color: #ccc;
+  padding: 6px 12px;
+  display: inline-block;
+  cursor: pointer;
+}
