--- a/src/app/detail-profile/detail-profileP/detail-rdv-patient/detail-rdv-patient.component.html
+++ b/src/app/detail-profile/detail-profileP/detail-rdv-patient/detail-rdv-patient.component.html
@@ -6,9 +6,14 @@
         <h5 style="color: #3F6589;">{{apntmnt.surgery.name}}</h5>
       </div>
       <div style="float: right;">
+      <span style="color: #0066FF; margin-top: 1rem;">Médecin:</span>
+      <p>{{apntmnt.doctor.firstname}} {{apntmnt.doctor.lastname}}</p>
+    </div>
+      <div style="float: right;">
         <span style="color: #0066FF; margin-top: 1rem;">Email:</span>
         <p>{{apntmnt.patient.email}}</p>
       </div>
+
       <div style="float: right;">
         <span style="color: #0066FF;">Date de rendez-vous:</span>
         <h6 style="font-weight: bold;">{{apntmnt.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}  <span> <i class="bi bi-calendar-date-fill" style="color: indianred ;"></i></span></h6>
